# prp

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/pairwise_reranker/pairwise_reranker/: pairwise_ranker.py
src/pairwise_reranker/prompts/: pairwise_prompt.py  templates.py
test/: test_pairwise_ranker.py
tests/: test_pairwise_ranker.py
