[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pairwise_reranker"
version = "0.1.0"
description = "A pairwise reranker using Groq's LLM for document ranking"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "numpy>=1.26.0",
    "groq>=0.5.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourusername/pairwise_reranker"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage>=7.0",
    "codecov>=2.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.coverage.run]
source = ["src/pairwise_reranker"]
branch = true
omit = [
    "src/pairwise_reranker/__init__.py",
    "src/pairwise_reranker/prompts/__init__.py"
]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:"
]